obj/y.output
Terminals which are not used

   OPER_MOD
   OPER_AT
   OPER_INC
   OPER_DEC
   OPER_AND
   OPER_OR
   OPER_NOT
   ERROR


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: decl
    3         | declList decl

    4 decl: varDecl
    5     | funDecl

    6 varDecl: typeSpecifier ID SEMICLN
    7        | typeSpecifier ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN

    8 typeSpecifier: KWD_INT
    9              | KWD_CHAR
   10              | KWD_VOID

   11 funDecl: funcTypeName LPAREN formalDeclList RPAREN funBody
   12        | funcTypeName LPAREN RPAREN funBody

   13 funcTypeName: typeSpecifier ID

   14 formalDeclList: formalDecl
   15               | formalDecl COMMA formalDeclList

   16 formalDecl: typeSpecifier ID
   17           | typeSpecifier ID arrayDecl

   18 arrayDecl: LSQ_BRKT RSQ_BRKT

   19 funBody: LCRLY_BRKT localDeclList statementList RCRLY_BRKT

   20 localDeclList: /* empty */
   21              | varDecl localDeclList

   22 statementList: /* empty */
   23              | statement statementList

   24 statement: assignStmt
   25          | compoundStmt
   26          | condStmt
   27          | loopStmt
   28          | returnStmt

   29 compoundStmt: LCRLY_BRKT statementList RCRLY_BRKT

   30 assignStmt: var OPER_ASGN expression SEMICLN
   31           | expression SEMICLN

   32 condStmt: KWD_IF LPAREN expression RPAREN statement
   33         | KWD_IF LPAREN expression RPAREN statement KWD_ELSE statement

   34 loopStmt: KWD_WHILE LPAREN expression RPAREN statement

   35 returnStmt: KWD_RETURN SEMICLN
   36           | KWD_RETURN expression SEMICLN

   37 var: ID
   38    | ID LSQ_BRKT addExpr RSQ_BRKT

   39 expression: addExpr
   40           | expression relop addExpr

   41 relop: OPER_LTE
   42      | OPER_LT
   43      | OPER_GT
   44      | OPER_GTE
   45      | OPER_EQ
   46      | OPER_NEQ

   47 addExpr: term
   48        | addExpr addop term

   49 addop: OPER_ADD
   50      | OPER_SUB

   51 term: factor
   52     | term mulop factor

   53 mulop: OPER_MUL
   54      | OPER_DIV

   55 factor: LPAREN expression RPAREN
   56       | var
   57       | funcCallExpr
   58       | INTCONST
   59       | CHARCONST
   60       | STRCONST

   61 funcCallExpr: ID LPAREN argList RPAREN
   62             | ID LPAREN RPAREN

   63 argList: expression
   64        | argList COMMA expression


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 6 7 13 16 17 37 38 61 62
STRCONST (259) 60
INTCONST (260) 7 58
CHARCONST (261) 59
KWD_IF (262) 32 33
KWD_ELSE (263) 33
KWD_WHILE (264) 34
KWD_INT (265) 8
KWD_CHAR (266) 9
KWD_RETURN (267) 35 36
KWD_VOID (268) 10
OPER_ADD (269) 49
OPER_SUB (270) 50
OPER_MUL (271) 53
OPER_DIV (272) 54
OPER_MOD (273)
OPER_LT (274) 42
OPER_GT (275) 43
OPER_LTE (276) 41
OPER_GTE (277) 44
OPER_EQ (278) 45
OPER_NEQ (279) 46
OPER_ASGN (280) 30
OPER_AT (281)
OPER_INC (282)
OPER_DEC (283)
OPER_AND (284)
OPER_OR (285)
OPER_NOT (286)
LSQ_BRKT (287) 7 18 38
RSQ_BRKT (288) 7 18 38
LCRLY_BRKT (289) 19 29
RCRLY_BRKT (290) 19 29
LPAREN (291) 11 12 32 33 34 55 61 62
RPAREN (292) 11 12 32 33 34 55 61 62
COMMA (293) 15 64
SEMICLN (294) 6 7 30 31 35 36
ERROR (295)
LOWER_THAN_ELSE (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
program (43)
    on left: 1, on right: 0
declList (44)
    on left: 2 3, on right: 1 3
decl (45)
    on left: 4 5, on right: 2 3
varDecl (46)
    on left: 6 7, on right: 4 21
typeSpecifier (47)
    on left: 8 9 10, on right: 6 7 13 16 17
funDecl (48)
    on left: 11 12, on right: 5
funcTypeName (49)
    on left: 13, on right: 11 12
formalDeclList (50)
    on left: 14 15, on right: 11 15
formalDecl (51)
    on left: 16 17, on right: 14 15
arrayDecl (52)
    on left: 18, on right: 17
funBody (53)
    on left: 19, on right: 11 12
localDeclList (54)
    on left: 20 21, on right: 19 21
statementList (55)
    on left: 22 23, on right: 19 23 29
statement (56)
    on left: 24 25 26 27 28, on right: 23 32 33 34
compoundStmt (57)
    on left: 29, on right: 25
assignStmt (58)
    on left: 30 31, on right: 24
condStmt (59)
    on left: 32 33, on right: 26
loopStmt (60)
    on left: 34, on right: 27
returnStmt (61)
    on left: 35 36, on right: 28
var (62)
    on left: 37 38, on right: 30 56
expression (63)
    on left: 39 40, on right: 30 31 32 33 34 36 40 55 63 64
relop (64)
    on left: 41 42 43 44 45 46, on right: 40
addExpr (65)
    on left: 47 48, on right: 38 39 40 48
addop (66)
    on left: 49 50, on right: 48
term (67)
    on left: 51 52, on right: 47 48 52
mulop (68)
    on left: 53 54, on right: 52
factor (69)
    on left: 55 56 57 58 59 60, on right: 51 52
funcCallExpr (70)
    on left: 61 62, on right: 57
argList (71)
    on left: 63 64, on right: 61 64


state 0

    0 $accept: . program $end

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    program        go to state 4
    declList       go to state 5
    decl           go to state 6
    varDecl        go to state 7
    typeSpecifier  go to state 8
    funDecl        go to state 9
    funcTypeName   go to state 10


state 1

    8 typeSpecifier: KWD_INT .

    $default  reduce using rule 8 (typeSpecifier)


state 2

    9 typeSpecifier: KWD_CHAR .

    $default  reduce using rule 9 (typeSpecifier)


state 3

   10 typeSpecifier: KWD_VOID .

    $default  reduce using rule 10 (typeSpecifier)


state 4

    0 $accept: program . $end

    $end  shift, and go to state 11


state 5

    1 program: declList .
    3 declList: declList . decl

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 1 (program)

    decl           go to state 12
    varDecl        go to state 7
    typeSpecifier  go to state 8
    funDecl        go to state 9
    funcTypeName   go to state 10


state 6

    2 declList: decl .

    $default  reduce using rule 2 (declList)


state 7

    4 decl: varDecl .

    $default  reduce using rule 4 (decl)


state 8

    6 varDecl: typeSpecifier . ID SEMICLN
    7        | typeSpecifier . ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN
   13 funcTypeName: typeSpecifier . ID

    ID  shift, and go to state 13


state 9

    5 decl: funDecl .

    $default  reduce using rule 5 (decl)


state 10

   11 funDecl: funcTypeName . LPAREN formalDeclList RPAREN funBody
   12        | funcTypeName . LPAREN RPAREN funBody

    LPAREN  shift, and go to state 14


state 11

    0 $accept: program $end .

    $default  accept


state 12

    3 declList: declList decl .

    $default  reduce using rule 3 (declList)


state 13

    6 varDecl: typeSpecifier ID . SEMICLN
    7        | typeSpecifier ID . LSQ_BRKT INTCONST RSQ_BRKT SEMICLN
   13 funcTypeName: typeSpecifier ID .

    LSQ_BRKT  shift, and go to state 15
    SEMICLN   shift, and go to state 16

    $default  reduce using rule 13 (funcTypeName)


state 14

   11 funDecl: funcTypeName LPAREN . formalDeclList RPAREN funBody
   12        | funcTypeName LPAREN . RPAREN funBody

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3
    RPAREN    shift, and go to state 17

    typeSpecifier   go to state 18
    formalDeclList  go to state 19
    formalDecl      go to state 20


state 15

    7 varDecl: typeSpecifier ID LSQ_BRKT . INTCONST RSQ_BRKT SEMICLN

    INTCONST  shift, and go to state 21


state 16

    6 varDecl: typeSpecifier ID SEMICLN .

    $default  reduce using rule 6 (varDecl)


state 17

   12 funDecl: funcTypeName LPAREN RPAREN . funBody

    LCRLY_BRKT  shift, and go to state 22

    funBody  go to state 23


state 18

   16 formalDecl: typeSpecifier . ID
   17           | typeSpecifier . ID arrayDecl

    ID  shift, and go to state 24


state 19

   11 funDecl: funcTypeName LPAREN formalDeclList . RPAREN funBody

    RPAREN  shift, and go to state 25


state 20

   14 formalDeclList: formalDecl .
   15               | formalDecl . COMMA formalDeclList

    COMMA  shift, and go to state 26

    $default  reduce using rule 14 (formalDeclList)


state 21

    7 varDecl: typeSpecifier ID LSQ_BRKT INTCONST . RSQ_BRKT SEMICLN

    RSQ_BRKT  shift, and go to state 27


state 22

   19 funBody: LCRLY_BRKT . localDeclList statementList RCRLY_BRKT

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 20 (localDeclList)

    varDecl        go to state 28
    typeSpecifier  go to state 29
    localDeclList  go to state 30


state 23

   12 funDecl: funcTypeName LPAREN RPAREN funBody .

    $default  reduce using rule 12 (funDecl)


state 24

   16 formalDecl: typeSpecifier ID .
   17           | typeSpecifier ID . arrayDecl

    LSQ_BRKT  shift, and go to state 31

    $default  reduce using rule 16 (formalDecl)

    arrayDecl  go to state 32


state 25

   11 funDecl: funcTypeName LPAREN formalDeclList RPAREN . funBody

    LCRLY_BRKT  shift, and go to state 22

    funBody  go to state 33


state 26

   15 formalDeclList: formalDecl COMMA . formalDeclList

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    typeSpecifier   go to state 18
    formalDeclList  go to state 34
    formalDecl      go to state 20


state 27

    7 varDecl: typeSpecifier ID LSQ_BRKT INTCONST RSQ_BRKT . SEMICLN

    SEMICLN  shift, and go to state 35


state 28

   21 localDeclList: varDecl . localDeclList

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 20 (localDeclList)

    varDecl        go to state 28
    typeSpecifier  go to state 29
    localDeclList  go to state 36


state 29

    6 varDecl: typeSpecifier . ID SEMICLN
    7        | typeSpecifier . ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN

    ID  shift, and go to state 37


state 30

   19 funBody: LCRLY_BRKT localDeclList . statementList RCRLY_BRKT

    ID          shift, and go to state 38
    STRCONST    shift, and go to state 39
    INTCONST    shift, and go to state 40
    CHARCONST   shift, and go to state 41
    KWD_IF      shift, and go to state 42
    KWD_WHILE   shift, and go to state 43
    KWD_RETURN  shift, and go to state 44
    LCRLY_BRKT  shift, and go to state 45
    LPAREN      shift, and go to state 46

    $default  reduce using rule 22 (statementList)

    statementList  go to state 47
    statement      go to state 48
    compoundStmt   go to state 49
    assignStmt     go to state 50
    condStmt       go to state 51
    loopStmt       go to state 52
    returnStmt     go to state 53
    var            go to state 54
    expression     go to state 55
    addExpr        go to state 56
    term           go to state 57
    factor         go to state 58
    funcCallExpr   go to state 59


state 31

   18 arrayDecl: LSQ_BRKT . RSQ_BRKT

    RSQ_BRKT  shift, and go to state 60


state 32

   17 formalDecl: typeSpecifier ID arrayDecl .

    $default  reduce using rule 17 (formalDecl)


state 33

   11 funDecl: funcTypeName LPAREN formalDeclList RPAREN funBody .

    $default  reduce using rule 11 (funDecl)


state 34

   15 formalDeclList: formalDecl COMMA formalDeclList .

    $default  reduce using rule 15 (formalDeclList)


state 35

    7 varDecl: typeSpecifier ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN .

    $default  reduce using rule 7 (varDecl)


state 36

   21 localDeclList: varDecl localDeclList .

    $default  reduce using rule 21 (localDeclList)


state 37

    6 varDecl: typeSpecifier ID . SEMICLN
    7        | typeSpecifier ID . LSQ_BRKT INTCONST RSQ_BRKT SEMICLN

    LSQ_BRKT  shift, and go to state 15
    SEMICLN   shift, and go to state 16


state 38

   37 var: ID .
   38    | ID . LSQ_BRKT addExpr RSQ_BRKT
   61 funcCallExpr: ID . LPAREN argList RPAREN
   62             | ID . LPAREN RPAREN

    LSQ_BRKT  shift, and go to state 61
    LPAREN    shift, and go to state 62

    $default  reduce using rule 37 (var)


state 39

   60 factor: STRCONST .

    $default  reduce using rule 60 (factor)


state 40

   58 factor: INTCONST .

    $default  reduce using rule 58 (factor)


state 41

   59 factor: CHARCONST .

    $default  reduce using rule 59 (factor)


state 42

   32 condStmt: KWD_IF . LPAREN expression RPAREN statement
   33         | KWD_IF . LPAREN expression RPAREN statement KWD_ELSE statement

    LPAREN  shift, and go to state 63


state 43

   34 loopStmt: KWD_WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 64


state 44

   35 returnStmt: KWD_RETURN . SEMICLN
   36           | KWD_RETURN . expression SEMICLN

    ID         shift, and go to state 38
    STRCONST   shift, and go to state 39
    INTCONST   shift, and go to state 40
    CHARCONST  shift, and go to state 41
    LPAREN     shift, and go to state 46
    SEMICLN    shift, and go to state 65

    var           go to state 66
    expression    go to state 67
    addExpr       go to state 56
    term          go to state 57
    factor        go to state 58
    funcCallExpr  go to state 59


state 45

   29 compoundStmt: LCRLY_BRKT . statementList RCRLY_BRKT

    ID          shift, and go to state 38
    STRCONST    shift, and go to state 39
    INTCONST    shift, and go to state 40
    CHARCONST   shift, and go to state 41
    KWD_IF      shift, and go to state 42
    KWD_WHILE   shift, and go to state 43
    KWD_RETURN  shift, and go to state 44
    LCRLY_BRKT  shift, and go to state 45
    LPAREN      shift, and go to state 46

    $default  reduce using rule 22 (statementList)

    statementList  go to state 68
    statement      go to state 48
    compoundStmt   go to state 49
    assignStmt     go to state 50
    condStmt       go to state 51
    loopStmt       go to state 52
    returnStmt     go to state 53
    var            go to state 54
    expression     go to state 55
    addExpr        go to state 56
    term           go to state 57
    factor         go to state 58
    funcCallExpr   go to state 59


state 46

   55 factor: LPAREN . expression RPAREN

    ID         shift, and go to state 38
    STRCONST   shift, and go to state 39
    INTCONST   shift, and go to state 40
    CHARCONST  shift, and go to state 41
    LPAREN     shift, and go to state 46

    var           go to state 66
    expression    go to state 69
    addExpr       go to state 56
    term          go to state 57
    factor        go to state 58
    funcCallExpr  go to state 59


state 47

   19 funBody: LCRLY_BRKT localDeclList statementList . RCRLY_BRKT

    RCRLY_BRKT  shift, and go to state 70


state 48

   23 statementList: statement . statementList

    ID          shift, and go to state 38
    STRCONST    shift, and go to state 39
    INTCONST    shift, and go to state 40
    CHARCONST   shift, and go to state 41
    KWD_IF      shift, and go to state 42
    KWD_WHILE   shift, and go to state 43
    KWD_RETURN  shift, and go to state 44
    LCRLY_BRKT  shift, and go to state 45
    LPAREN      shift, and go to state 46

    $default  reduce using rule 22 (statementList)

    statementList  go to state 71
    statement      go to state 48
    compoundStmt   go to state 49
    assignStmt     go to state 50
    condStmt       go to state 51
    loopStmt       go to state 52
    returnStmt     go to state 53
    var            go to state 54
    expression     go to state 55
    addExpr        go to state 56
    term           go to state 57
    factor         go to state 58
    funcCallExpr   go to state 59


state 49

   25 statement: compoundStmt .

    $default  reduce using rule 25 (statement)


state 50

   24 statement: assignStmt .

    $default  reduce using rule 24 (statement)


state 51

   26 statement: condStmt .

    $default  reduce using rule 26 (statement)


state 52

   27 statement: loopStmt .

    $default  reduce using rule 27 (statement)


state 53

   28 statement: returnStmt .
